--- a/assets/scss/variables.scss
+++ b/assets/scss/variables.scss
@@ -12,6 +12,7 @@
   --background-button: #323232;
   --text-color: #fcfcfc;
   --primary-color: #b38c2c;
+  --secondary-color: #fcfcfc;
   --darkred:#b38c2c;
   --background-card: #4a4a4a;
   --primary-color-opacity: #b38c2c8c;
@@ -22,6 +23,7 @@
   --background-button: #fcfcfc;
   --text-color: #262525;
   --primary-color: #c0392b;
+  --secondary-color: #c0392b;
   --primary-color-opacity: #c0392b8c;
 }
 
