--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -55,7 +55,7 @@ body {
 }
 
 .nav {
-  .nuxt-link-active {
+  .nuxt-link-exact-active {
     position: relative;
 
     &:after {
@@ -82,7 +82,7 @@ body {
   }
 }
 
-.booking {
+.booking, .booking-mobile {
   .vdp-datepicker__calendar .cell.selected {
     background: var(--primary-color);
     color: white;
@@ -128,6 +128,8 @@ body {
     text-align: center;
   }
 }
+
+
 
 @media only screen and(max-width: 767px) {
   .no-mobile-gutters > .col, .no-mobile-gutters > [class*="col-"] {
